added login components with routing

--- a/banking-frontend-angular/src/app/app.component.html
+++ b/banking-frontend-angular/src/app/app.component.html
@@ -3,5 +3,5 @@
 <a [routerLink]="['/login']"><button>LOGIN</button></a>
 <a [routerLink]="['/admin-login']"><button>ADMIN LOGIN</button></a>
 <a [routerLink]="['/logout']"><button>LOGOUT</button></a>
-<a [routerLink]="['/session-expired']"><button>SESSION EXPIREDs</button></a>
+<a [routerLink]="['/session-expired']"><button>SESSION EXPIRED</button></a>
 <router-outlet></router-outlet>
