--- a/banking-frontend-angular/src/app/app.component.html
+++ b/banking-frontend-angular/src/app/app.component.html
@@ -4,4 +4,7 @@
 <a [routerLink]="['/admin-login']"><button>ADMIN LOGIN</button></a>
 <a [routerLink]="['/logout']"><button>LOGOUT</button></a>
 <a [routerLink]="['/session-expired']"><button>SESSION EXPIRED</button></a>
+<a [routerLink]="['/forgot-user-id']"><button>FORGOT USER ID</button></a>
+<a [routerLink]="['/forgot-password']"><button>FORGOT PASSWORD</button></a>
+<a [routerLink]="['/set-new-password']"><button>SET NEW PASSWORD</button></a>
 <router-outlet></router-outlet>
