--- a/banking-frontend-angular/src/app/app.component.html
+++ b/banking-frontend-angular/src/app/app.component.html
@@ -1,7 +1,5 @@
-<!-- <app-login></app-login>
-<app-admin-login></app-admin-login> -->
-<a [routerLink]="['/login']"><button>LOGIN</button></a>
+<!-- <a [routerLink]="['/home']"><button>HOME</button></a>
 <a [routerLink]="['/admin-login']"><button>ADMIN LOGIN</button></a>
 <a [routerLink]="['/logout']"><button>LOGOUT</button></a>
-<a [routerLink]="['/session-expired']"><button>SESSION EXPIRED</button></a>
+<a [routerLink]="['/session-expired']"><button>SESSION EXPIRED</button></a> -->
 <router-outlet></router-outlet>
