--- a/banking-frontend-angular/src/app/home/home.component.html
+++ b/banking-frontend-angular/src/app/home/home.component.html
@@ -1,1 +1,24 @@
-<p>home works!</p>
+<div class="header">
+    <a href="#">HFDC Bank</a>
+    <div style="float: right;">
+        <a href="#">Register for Internet Baning</a>
+        <a href="#">Apply for Account</a>
+        <a [routerLink]="['/admin-login']">Admin Login</a>
+    </div>
+</div>
+<div style="margin-top: 70px;">
+    <div class="banner-image">
+        <img src="https://www.icicibank.com/managed-assets/images/blog/big/what-is-net-banking.jpg" alt="banner-image"
+            width="840px" height="454px">
+    </div>
+    <div class="login">
+        <app-login></app-login>
+    </div>
+</div>
+<div class="footer">
+    <a href="#">About Us</a>
+    <a href="#">Contact Us</a>
+    <a href="#">Connect</a>
+    <a href="#">FAQs</a>
+    <p style="padding-top: 40px;">© 2020 HFDC Bank. All rights reserved</p>
+</div>
