--- a/banking-frontend-angular/src/app/session-expired/session-expired.component.html
+++ b/banking-frontend-angular/src/app/session-expired/session-expired.component.html
@@ -7,7 +7,7 @@
     <div class="h4">You were inactive for some time.</div>
     <br>
     <div style="margin-bottom: 3%;">
-        <a href="login.html"><button class="btn btn-primary" type="submit">Re-Login</button></a>
+        <a [routerLink]="['/login']"><button class="btn btn-primary" type="submit">Re-Login</button></a>&nbsp;
         <a href="home.html"><button class="btn btn-success" type="submit">Back to Home</button></a>
     </div>
 </div>
