--- a/banking-frontend-angular/src/app/login/login.component.html
+++ b/banking-frontend-angular/src/app/login/login.component.html
@@ -1,25 +1,31 @@
-<div class="page-header h1">
+<!-- <div class="page-header h1">
     <p>HFDC Bank</p>
-</div>
-<div class="wrapper container" style="width: 28%;">
+</div> -->
+<div class="wrapper container">
     <h2>Login</h2>
     <br>
     <p>Please fill in your credentials to login.</p>
     <br>
-    <form action="login.html" method="post">
-        <div class="form-group ">
+    <!--VALIDATION NOT WORKING PROPERLY-->
+    <form [formGroup]="loginForm" action="login.html" method="post">
+        <div class="form-group">
             <label>User ID</label>
-            <input class="form-control" type="text" name="userId" placeholder="Your 6-digit user id">
+            <input formControlName="userId" class="form-control" type="text" name="userId" placeholder="Your 6-digit user id">
+            <div *ngIf="loginForm.controls.userId.invalid">
+                <div *ngIf="loginForm.controls.userId.errors.required">User ID is required</div>
+                <div *ngIf="loginForm.controls.userId.errors.pattern">User ID must contain 6 digits</div>
+            </div>
         </div>
         <div class="form-group">
             <label>Password</label>
-            <input class="form-control" type="password" name="password" placeholder="Your password">
+            <input formControlName="password" class="form-control" type="password" name="password" placeholder="Your password">
+            <div *ngIf="loginForm.controls.password.invalid">Password is required</div>
         </div>
         <div class="form-group">
-            <input type="submit" class="btn btn-primary" value="Login" style="width: 100%;">
+            <input (click)="buildLoginForm()" type="submit" class="btn btn-primary" value="Login" style="width: 100%;">
         </div>
-        <p>Register for Internet Banking <a href="register.html">here</a>.</p>
-        <p>Forgot User ID? <a href="forgot-user-id.html">Click here</a>.</p>
-        <p>Forgot Password? <a href="forgot-password.php">Click here</a>.</p>
+        <p>Register for Internet Banking <a href="">here</a>.</p>
+        <p>Forgot User ID? <a href="">Click here</a>.</p>
+        <p>Forgot Password? <a href="">Click here</a>.</p>
     </form>
 </div>
