--- a/banking-frontend-angular/src/app/logout/logout.component.html
+++ b/banking-frontend-angular/src/app/logout/logout.component.html
@@ -7,7 +7,7 @@
     <div class="h4">Thank you for banking with us.</div>
     <br>
     <div style="margin-bottom: 3%;">
-        <a href="login.html"><button class="btn btn-primary" type="submit">Re-Login</button></a>
+        <a href="login.html"><button class="btn btn-primary" type="submit">Re-Login</button></a>&nbsp;
         <a href="home.html"><button class="btn btn-success" type="submit">Back to Home</button></a>
     </div>
 </div>
