Changes made to the home page

--- a/banking-frontend-angular/src/app/admin-login/admin-login.component.html
+++ b/banking-frontend-angular/src/app/admin-login/admin-login.component.html
@@ -6,7 +6,7 @@
     <br>
     <p>Please fill in your credentials to login.</p>
     <br>
-    <form action="login.html" method="post">
+    <form action="home.html" method="post">
         <div class="form-group ">
             <label>User ID</label>
             <input class="form-control" type="text" name="userId" placeholder="Your 5-digit admin id">
