--- a/banking-frontend-angular/src/app/home/home.component.css
+++ b/banking-frontend-angular/src/app/home/home.component.css
@@ -5,6 +5,8 @@
   position: fixed;
   width: 100%;
   top: 0;
+  /*margin: 0px 0px 0px 150px  ;*/
+  
 }
 
 .header a {
@@ -48,10 +50,14 @@
 
 .banner-image {
   float: left;
-  margin: 28px 0;
+  margin: 28px 100px;
 }
 
 img {
   border-radius: 10px;
   margin-left: 50px;
+}
+
+.login{
+  margin-right: 110px;
 }
