--- a/banking-frontend-angular/src/app/home/home.component.html
+++ b/banking-frontend-angular/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="header">
+<div class="header" style="justify-content: center;">
     <a href="#">HFDC Bank</a>
     <div style="float: right;">
         <a href="#">Register for Internet Baning</a>
@@ -9,7 +9,7 @@
 <div style="margin-top: 70px;">
     <div class="banner-image">
         <img src="https://www.icicibank.com/managed-assets/images/blog/big/what-is-net-banking.jpg" alt="banner-image"
-            width="840px" height="454px">
+            width="640px" height="354px">
     </div>
     <div class="login">
         <app-login></app-login>
