--- a/banking-frontend-angular/src/app/logout/logout.component.html
+++ b/banking-frontend-angular/src/app/logout/logout.component.html
@@ -1,7 +1,8 @@
-<div class="page-header h1" style="text-align: center; font-family: 'Raleway', sans-serif; font-size: 50px;">
+<!-- <div class="page-header h1" style="text-align: center; font-family: 'Raleway', sans-serif; font-size: 50px;">
     <p>HFDC Bank</p>
-</div>
-<div class="wrapper container" style="width: 46%;">
+</div> -->
+<app-dashboard></app-dashboard>
+<div class="wrapper container" style="width: 46%; position: relative;">
     <h2>You have successfully logged out</h2>
     <br>
     <div class="h4">Thank you for banking with us.</div>
