--- a/banking-frontend-angular/src/app/home/home.component.html
+++ b/banking-frontend-angular/src/app/home/home.component.html
@@ -8,26 +8,19 @@
 </div>
 <div style="margin-top: 70px;">
     <div class="banner-image">
-        <img src="https://www.icicibank.com/managed-assets/images/blog/big/what-is-net-banking.jpg" alt="banner-image"
-            width="840px" height="454px">
+        <img src="/assets/images/banner-image.jpg" alt="banner-image" width="840px" height="440px">
     </div>
     <div class="login">
         <app-login></app-login>
     </div>
 </div>
-<div class="footer">
-    <a href="#">About Us</a>
-    <a href="#">Contact Us</a>
-    <a href="#">Connect</a>
-    <a href="#">FAQs</a>
-    <p style="padding-top: 40px;">© 2020 HFDC Bank. All rights reserved</p>
-</div>
+<app-footer></app-footer>
 
 <!--TEMPORARY BUTTONS-->
 <a [routerLink]="['/home']"><button>HOME</button></a>
+<a [routerLink]="['/dashboard']"><button>DASHBOARD</button></a>
 <a [routerLink]="['/admin-login']"><button>ADMIN LOGIN</button></a>
 <a [routerLink]="['/logout']"><button>LOGOUT</button></a>
-<a [routerLink]="['/session-expired']"><button>SESSION EXPIRED</button></a>
 <a [routerLink]="['/session-expired']"><button>SESSION EXPIRED</button></a>
 <a [routerLink]="['/forgot-user-id']"><button>FORGOT USER ID</button></a>
 <a [routerLink]="['/forgot-password']"><button>FORGOT PASSWORD</button></a>
