--- a/banking-frontend-angular/src/app/login/login.component.html
+++ b/banking-frontend-angular/src/app/login/login.component.html
@@ -10,7 +10,8 @@
     <form [formGroup]="loginForm" action="login.html" method="post">
         <div class="form-group">
             <label>User ID</label>
-            <input formControlName="userId" class="form-control" type="text" name="userId" placeholder="Your 6-digit user id">
+            <input formControlName="userId" class="form-control" type="text" name="userId"
+                placeholder="Your 6-digit user id">
             <div *ngIf="loginForm.controls.userId.invalid">
                 <div *ngIf="loginForm.controls.userId.errors.required">User ID is required</div>
                 <div *ngIf="loginForm.controls.userId.errors.pattern">User ID must contain 6 digits</div>
@@ -18,14 +19,17 @@
         </div>
         <div class="form-group">
             <label>Password</label>
-            <input formControlName="password" class="form-control" type="password" name="password" placeholder="Your password">
+            <input formControlName="password" class="form-control" type="password" name="password"
+                placeholder="Your password">
             <div *ngIf="loginForm.controls.password.invalid">Password is required</div>
         </div>
         <div class="form-group">
             <input (click)="buildLoginForm()" type="submit" class="btn btn-primary" value="Login" style="width: 100%;">
         </div>
-        <p>Register for Internet Banking <a href="">here</a>.</p>
-        <p>Forgot User ID? <a href="">Click here</a>.</p>
-        <p>Forgot Password? <a href="">Click here</a>.</p>
+        <!-- <p>Register for Internet Banking <a href="">here</a>.</p> -->
+        <div class="forgot-options">
+            <p>Forgot User ID? <a href="">Click here</a>.</p>
+            <p>Forgot Password? <a href="">Click here</a>.</p>
+        </div>
     </form>
 </div>
