--- a/banking-frontend-angular/src/app/session-expired/session-expired.component.html
+++ b/banking-frontend-angular/src/app/session-expired/session-expired.component.html
@@ -1,7 +1,5 @@
-<div class="page-header h1" style="text-align: center; font-family: 'Raleway', sans-serif; font-size: 50px;">
-    <p>HFDC Bank</p>
-</div>
-<div class="wrapper container" style="width: 46%;">
+<app-dashboard></app-dashboard>
+<div class="wrapper container" style="width: 46%; position: relative;">
     <h2>Your session has expired</h2>
     <br>
     <div class="h4">You were inactive for some time.</div>
