--- a/banking-frontend-angular/src/app/dashboard/dashboard.component.html
+++ b/banking-frontend-angular/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="text-center"><img src="/assets/hfdc-bank-logo.png" alt="hfdc-bank-logo" width="100" height="100"></div>
+<div class="text-center"><img src="/assets/images/hfdc-bank-logo.png" alt="hfdc-bank-logo" width="100" height="100"></div>
 <div class="header">
     <p href="#">HFDC Bank</p>
     <ul style="float: right;">
@@ -17,4 +17,4 @@
         <li>Account Statement</li>
     </ul>
 </div>
-<app-footer></app-footer>
+<!-- <app-footer></app-footer> -->
