--- a/banking-frontend-angular/src/app/fund-transfer/fund-transfer.component.html
+++ b/banking-frontend-angular/src/app/fund-transfer/fund-transfer.component.html
@@ -1,4 +1,4 @@
-<div class="text">
+<!-- <div class="text">
     <h3>
         Fund Transfer
     </h3>
@@ -74,4 +74,4 @@
       
   </div>
   </div>
-
+ -->
