--- a/banking-frontend-angular/src/app/open-acc/open-acc.component.html
+++ b/banking-frontend-angular/src/app/open-acc/open-acc.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper text-center my-3">
+<!-- <div class="wrapper text-center my-3">
     <h3>Open Savings Account</h3>
 </div>
 <div class="w-75 form justify-content-center">
@@ -250,4 +250,4 @@
             <button class="btn btn-primary my-4" type="submit" [disabled]="!openAccForm.valid">Submit</button><br>
         </div>
     </form>
-</div>
+</div> -->
