--- a/banking-frontend-angular/src/app/footer/footer.component.html
+++ b/banking-frontend-angular/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="footer">
-    <div class="text-center"><img src="/assets/hfdc-bank-logo.png" alt="hfdc-bank-logo" width="100" height="100"></div>
+    <div class="text-center"><img src="/assets/images/hfdc-bank-logo.png" alt="hfdc-bank-logo" width="100" height="100"></div>
     <a href="#">About Us</a>
     <a href="#">Contact Us</a>
     <a href="#">Connect</a>
