--- a/banking-frontend-angular/src/app/home/home.component.css
+++ b/banking-frontend-angular/src/app/home/home.component.css
@@ -5,8 +5,6 @@
   position: fixed;
   width: 100%;
   top: 0;
-  /*margin: 0px 0px 0px 150px  ;*/
-  
 }
 
 .header a {
@@ -27,16 +25,22 @@
   opacity: 60%;
 }
 
+.footer {
+  padding: 20px;
+  background-image: linear-gradient(to right, #adb0c5, #d3dbe0);
+  bottom: 0;
+  width: 100%;
+  height: 250px;
+  overflow: hidden;
+  text-align: center;
+}
+
 .banner-image {
   float: left;
-  margin: 28px 100px;
+  margin: 28px 0;
 }
 
 .banner-image img {
   border-radius: 10px;
   margin-left: 50px;
-}
-
-.login{
-  margin-right: 110px;
 }
