--- a/banking-frontend-angular/src/app/home/home.component.html
+++ b/banking-frontend-angular/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="header" style="justify-content: center;">
+<div class="header">
     <a href="#">HFDC Bank</a>
     <div style="float: right;">
         <a href="#">Register for Internet Baning</a>
