--- a/banking-frontend-angular/src/app/dashboard/dashboard.component.css
+++ b/banking-frontend-angular/src/app/dashboard/dashboard.component.css
@@ -8,27 +8,20 @@
     padding: 12px;
     height: 70px;
     width: 100%;
-    /* top: 0; */
     margin-top: 6px;
   }
   .header li {
     float: left;
-    text-align: center;
     padding: 12px;
     padding-right: 30px;
-    font-size: 18px;
-    line-height: 25px;
     list-style-type: none;
     /* background-image: linear-gradient(to right, #adb0c5, #d3dbe0); */
   }
   .header p {
     float: left;
     color: rgb(58, 56, 56);
-    text-align: center;
     padding: 12px;
-    text-decoration: none;
-    font-size: 18px;
-    line-height: 25px;
+    padding-left: 92px;
   }
 .sidebar {
     list-style-type: none;
@@ -44,6 +37,7 @@
     height: 100px;
     background-image: linear-gradient(to right, #adb0c5, #d3dbe0);
     text-align: center;
+    padding-top: 39px;
 }
 li:hover{
     opacity: 60%;
