validations added for forgot password,set new password,forgot user id components

--- a/banking-frontend-angular/src/app/forgot-password/forgot-password.component.html
+++ b/banking-frontend-angular/src/app/forgot-password/forgot-password.component.html
@@ -6,18 +6,28 @@
     <br>
     <p>Please fill in your credentials to set the new password.</p>
     <br>
-    <form action="set-new-password.html" method="post">
-        <div class="form-group ">
-            <label>Enter User Id</label>
-            <input class="form-control" type="text" name="accountNo">
-        </div>
-        <div class="form-group">
-            <label>Enter OTP</label>
-            <input class="form-control" type="text" name="password">
-        </div>
-        <div class="form-group">
-            <input type="submit" class="btn btn-primary" value="Proceed" style="margin-left: 80px;">
-            <input type="submit" class="btn btn-primary" value="Back" style="margin-left:80px ;" >
-        </div>
-    </form>
+        <form [formGroup]="forgotPasswordForm">
+            <div class="form-group">
+                <label>Enter User ID</label>
+                <input [class.is-invalid]="forgotPasswordForm.get('userId').invalid && forgotPasswordForm.get('userId').touched" 
+                        formControlName="userId" type="text" class="form-control">
+                <small class="text-danger" [class.d-none]="forgotPasswordForm.get('userId').valid || forgotPasswordForm.get('userId').untouched">User ID is required</small>
+            </div>
+
+            <div class="form-group">
+                <label>Enter OTP(One Time Password) sent to your email Id</label>
+                <input [class.is-invalid]="forgotPasswordForm.get('otp').invalid && forgotPasswordForm.get('otp').touched"
+                        formControlName="otp" type="text" class="form-control">
+                <div *ngIf="forgotPasswordForm.get('otp').invalid && forgotPasswordForm.get('otp').touched">
+                    <small *ngIf="forgotPasswordForm.get('otp').errors?.required" class="text-danger">OTP is required</small>
+                    <small *ngIf="forgotPasswordForm.get('otp').errors?.minLength" class="text-danger">OTP should be of minimum 6 digits</small>
+                    <small *ngIf="forgotPasswordForm.get('otp').errors?.maxLength" class="text-danger">OTP should not exceed 6 digits</small>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <input type="submit" class="btn btn-primary" value="Proceed" style="margin-left: 80px;">
+                <input type="submit" class="btn btn-primary" value="Back" style="margin-left:80px ;" >
+            </div>
+        </form>   
 </div>
