--- a/banking-frontend-angular/src/app/set-new-password/set-new-password.component.html
+++ b/banking-frontend-angular/src/app/set-new-password/set-new-password.component.html
@@ -4,14 +4,16 @@
 <div class="wrapper container" style="width: 28%;">
     <h4>Set New Password</h4>
     <br>
-    <form action="forgot-user-id.html" method="post">
+    <form [formGroup]="setNewPasswordForm">
         <div class="form-group ">
             <label>Enter new password</label>
             <input class="form-control" type="password" name="password">
         </div>
         <div class="form-group">
             <label>Confirm New Password</label>
-            <input class="form-control" type="password" name="confirmPassword">
+            <input [class.is-invalid]="setNewPasswordForm.errors?.misMatch" formControlName="confirmPassword" type="password" class="form-control">
+            <small class="text-danger" *ngIf="setNewPasswordForm.errors?.misMatch">Passwords do not match</small>
+
         </div>
         <div class="form-group">
             <input type="submit" class="btn btn-primary" value="Submit" style="margin-left: 80px; align-content: center;">
