added account statement and summary

--- a/banking-frontend-angular/src/app/admin-login/admin-login.component.html
+++ b/banking-frontend-angular/src/app/admin-login/admin-login.component.html
@@ -1,11 +1,10 @@
-<div class="page-header h1" style="text-align: center; font-family: 'Raleway', sans-serif; font-size: 50px;">
-    <p>HFDC Bank</p>
+<div class="text-center">
+    <img src="/assets/images/hfdc-bank-logo.png" alt="hfdc-bank-logo" width="180" height="180">
 </div>
 <div class="wrapper container" style="width: 28%;">
-    <h2>Admin Login</h2>
+    <p class="h3">Login</p>
     <br>
     <p>Please fill in your credentials to login.</p>
-    <br>
     <form action="home.html" method="post">
         <div class="form-group ">
             <label>User ID</label>
@@ -18,7 +17,7 @@
         <div class="form-group">
             <input type="submit" class="btn btn-primary" value="Login" style="width: 100%;">
         </div>
-        <p>Forgot Admin ID? <a href="forgot-admin-id.html">Click here</a>.</p>
-        <p>Forgot Password? <a href="forgot-password.php">Click here</a>.</p>
+        <p>Forgot Admin ID? <a href="">Click here</a>.</p>
+        <p>Forgot Password? <a href="">Click here</a>.</p>
     </form>
 </div>
