--- a/banking-frontend-angular/src/app/logout/logout.component.html
+++ b/banking-frontend-angular/src/app/logout/logout.component.html
@@ -1,11 +1,13 @@
 <!-- <div class="page-header h1" style="text-align: center; font-family: 'Raleway', sans-serif; font-size: 50px;">
     <p>HFDC Bank</p>
 </div> -->
-<app-dashboard></app-dashboard>
-<div class="wrapper container" style="width: 46%; position: relative;">
-    <h2>You have successfully logged out</h2>
+<div class="text-center">
+    <img src="/assets/images/hfdc-bank-logo.png" alt="hfdc-bank-logo" width="180" height="180">
+</div>
+<div class="wrapper container" style="width: 46%;">
+    <div class="h2">You have successfully logged out</div>
     <br>
-    <div class="h4">Thank you for banking with us.</div>
+    <div class="h5">Thank you for banking with us.</div>
     <br>
     <div style="margin-bottom: 3%;">
         <a href="login.html"><button class="btn btn-primary" type="submit">Re-Login</button></a>&nbsp;
