--- a/banking-frontend-angular/src/app/session-expired/session-expired.component.html
+++ b/banking-frontend-angular/src/app/session-expired/session-expired.component.html
@@ -1,8 +1,10 @@
-<app-dashboard></app-dashboard>
+<div class="text-center">
+    <img src="/assets/images/hfdc-bank-logo.png" alt="hfdc-bank-logo" width="180" height="180">
+</div>
 <div class="wrapper container" style="width: 46%; position: relative;">
-    <h2>Your session has expired</h2>
+    <div class="h2">Your session has expired</div>
     <br>
-    <div class="h4">You were inactive for some time.</div>
+    <div class="h5">You were inactive for some time.</div>
     <br>
     <div style="margin-bottom: 3%;">
         <a [routerLink]="['/login']"><button class="btn btn-primary" type="submit">Re-Login</button></a>&nbsp;
