--- a/banking-frontend-angular/src/app/dashboard/dashboard.component.html
+++ b/banking-frontend-angular/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,6 @@
 <div style="font-size: 18px;">
-    <div class="text-center"><img src="/assets/images/hfdc-bank-logo.png" alt="hfdc-bank-logo" width="100" height="100">
+    <div class="text-center">
+        <img src="/assets/images/hfdc-bank-logo.png" alt="hfdc-bank-logo" width="100" height="100">
     </div>
     <div class="header">
         <p href="#">HFDC Bank</p>
@@ -10,10 +11,11 @@
             <li>Logout</li>
         </ul>
     </div>
+    <div class="h5" style=" position: absolute; padding-left: 300px;">Welcome, {{name}}</div>
     <div>
         <ul class="sidebar">
-            <li [routerLink]="['/logout']">Account Summary</li>
-            <li [routerLink]="['/session-expired']">Account Statement</li>
+            <li [routerLink]="['/account-summary']">Account Summary</li>
+            <li [routerLink]="['/account-statement']">Account Statement</li>
             <li>Fund Transfer</li>
             <li>Add Beneficiary</li>
             <li>Account Statement</li>
