--- a/banking-frontend-angular/src/app/set-new-password/set-new-password.component.html
+++ b/banking-frontend-angular/src/app/set-new-password/set-new-password.component.html
@@ -1,4 +1,6 @@
-<div class="page-header h1">
+<!-- COMMENTED BECAUSE OF ERRORS -->
+
+<!-- <div class="page-header h1">
     <p>HFDC Bank</p>
 </div>
 <div class="wrapper container" style="width: 28%;">
@@ -20,4 +22,4 @@
         </div>
     </form>
 </div>
-
+ -->
