--- a/banking-frontend-angular/src/app/home/home.component.html
+++ b/banking-frontend-angular/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="header">
     <a href="#">HFDC Bank</a>
     <div style="float: right;">
-        <a href="#">Register for Internet Baning</a>
-        <a href="#">Apply for Account</a>
+        <a [routerLink]="['/register-ib']">Register for Internet Baning</a>
+        <a [routerLink]="['/open-acc']">Apply for Account</a>
         <a [routerLink]="['/admin-login']">Admin Login</a>
     </div>
 </div>
