reg,open acc changes

--- a/banking-frontend-angular/src/app/home/home.component.html
+++ b/banking-frontend-angular/src/app/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="header">
     <a href="#">HFDC Bank</a>
     <div style="float: right;">
-        <a [routerLink]="['/register-ib']">Register for Internet Baning</a>
-        <a [routerLink]="['/open-acc']">Apply for Account</a>
-        <a [routerLink]="['/admin-login']">Admin Login</a>
+        <a href = "#" routerLink = "/register-ib" >Register for Internet Banking</a>
+        <a href = "#" routerLink = "/open-acc">Apply for Account</a>
+        <a [routerLink] = "['/admin-login']">Admin Login</a>
     </div>
 </div>
 <div style="margin-top: 70px;">
