--- a/banking-frontend-angular/src/app/open-acc/open-acc.component.html
+++ b/banking-frontend-angular/src/app/open-acc/open-acc.component.html
@@ -1,6 +1,5 @@
-<div class="wrapper text-center my-3">
-    <h3>Open Savings Account</h3>
-</div>
+<h3><strong>Open Savings Account </strong></h3>
+
 <div class="w-75 form justify-content-center">
     <form class="form" [formGroup]="openAccForm" (ngSubmit)="onSubmit()">
         <div class="card my-1">
@@ -236,12 +235,12 @@
             <div class="pos">
                 <div class="form-group row ml-1">
                     <div class="checkbox">
-                        <label><input type="checkbox" id="internetBanking">Opt for Internet Banking</label>
+                        <label><input type="checkbox" id="internetBanking">  Opt for Internet Banking</label>
                     </div>
                 </div>
                 <div class="form-group row ml-1">
                     <div class="checkbox">
-                        <label><input type="checkbox" id="termsCheckbox">I agree to the terms and conditions</label>
+                        <label><input type="checkbox" id="termsCheckbox">  I agree to the terms and conditions</label>
                     </div>
                 </div>
             </div>
