--- a/banking-frontend-angular/src/app/register-ib/register-ib.component.html
+++ b/banking-frontend-angular/src/app/register-ib/register-ib.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper container">
+<div class="wrapper container center">
     <p class="h3">Register for Internet Banking</p>
     <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
